[gd_scene load_steps=13 format=3 uid="uid://bwiw68oyuvcma"]

[ext_resource type="Script" uid="uid://bereavdtwvx5n" path="res://Scripts/player.gd" id="1_oihdw"]
[ext_resource type="Texture2D" uid="uid://bytmt4vf1nuh7" path="res://Sprites/Player/PlayerIdle1.png" id="2_3dn4l"]
[ext_resource type="Script" uid="uid://dfh1dic4buxmf" path="res://Gameplay Elements/animation_handler.gd" id="2_qd1yo"]
[ext_resource type="Texture2D" uid="uid://dlh1kt37f8p4q" path="res://Sprites/Player/PlayerIdle2.png" id="3_qd1yo"]
[ext_resource type="Texture2D" uid="uid://pudq0t6y8sir" path="res://Sprites/Player/PlayerSwingH1.png" id="5_suena"]
[ext_resource type="Texture2D" uid="uid://bukg1q5nihg36" path="res://Sprites/Player/PlayerSwingH2.png" id="6_35a03"]
[ext_resource type="Texture2D" uid="uid://bqxk4kpwukj4q" path="res://Sprites/Player/PlayerSwingH3.png" id="7_2swth"]
[ext_resource type="Texture2D" uid="uid://bjs6dx5kdihxg" path="res://Sprites/Player/PlayerSwingH4.png" id="8_54kuu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dbv4j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3dn4l")
}, {
"duration": 1.0,
"texture": ExtResource("3_qd1yo")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_1ytrv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_suena")
}, {
"duration": 1.0,
"texture": ExtResource("6_35a03")
}, {
"duration": 1.0,
"texture": ExtResource("7_2swth")
}, {
"duration": 1.0,
"texture": ExtResource("8_54kuu")
}],
"loop": false,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xxies"]
size = Vector2(20, 41)

[sub_resource type="LabelSettings" id="LabelSettings_v2t65"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="Player" type="Area2D"]
z_index = 2
z_as_relative = false
collision_layer = 4
collision_mask = 2
script = ExtResource("1_oihdw")

[node name="AnimationHandler" type="Marker2D" parent="."]
script = ExtResource("2_qd1yo")

[node name="Idle" type="AnimatedSprite2D" parent="AnimationHandler"]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_dbv4j")

[node name="SwingH" type="AnimatedSprite2D" parent="AnimationHandler"]
visible = false
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_1ytrv")

[node name="SwingU" type="Sprite2D" parent="AnimationHandler"]
visible = false

[node name="SwingD" type="Sprite2D" parent="AnimationHandler"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10.5)
shape = SubResource("RectangleShape2D_xxies")

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 3.3
autostart = true

[node name="VisualTimer" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_v2t65")

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="animation_finished" from="AnimationHandler/SwingH" to="AnimationHandler" method="_on_animation_finished"]
[connection signal="timeout" from="SlideTimer" to="." method="_on_slide_timer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_reset_timer_timeout"]
